objects/ssot__FinancialApplication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AppIntakeChannelType__c</fullName>
        <label>App Intake Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Application Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadId__c</fullName>
        <label>Lead</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ThirdPartyLoanProviderAccountId__c</fullName>
        <label>Third Party Loan Provider Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDebtToIncomePercent__c</fullName>
        <label>Total Debt To Income Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalExpenseToIncomeRatioNumber__c</fullName>
        <label>Total Expense To Income Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLoanToValuePercent__c</fullName>
        <label>Total Loan To Value Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>